--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,12 @@
 a{
-    color: aquamarine;
+    color:aquamarine;
+    font-size: 16px;
+}
+body {
+    background-color: #000000;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: normal;
+    color: white;
+
 }
