--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,3 +15,14 @@ body {
     font-weight:normal ;
     font-size: 50px;
 }
+
+.guide{
+    font-weight: 300;
+    font-size: 42px;
+
+}
+
+.guide-info{
+    font-size: 21px;
+    color: grey;
+}
