--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -22,7 +22,16 @@ body {
 
 }
 
+.iphone{
+    margin-top: 20px;
+}
+
 .guide-info{
     font-size: 21px;
+    color: grey;
+}
+
+footer{
+    text-align: right;
     color: grey;
 }
